apps/node-feature-discovery/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: node-feature-discovery
  labels:
    goldilocks.fairwinds.com/enabled: "true"
